education part start
education part start

--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,9 @@ body{
     background-color: #00bdbd;
 }
 /* About part css end */
+
+/* education part css start */
+.education-container{
+    background-color: #EEEEEE;
+}
+/* education part css end */
