--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,9 @@ body{
     background-color: #282b37;
 }
 /* navigation part css end */
+
+/* About part css start */
+.about-container{
+    background-color: #00bdbd;
+}
+/* About part css end */
