--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
 body{
     font-family: 'Open Sans', sans-serif;
 }
+/* banner part css start */
+.banner-container{
+    background-color: #cacaca;
+}
+.banner-colum{
+    background-color: #8d8d8d;
+}
+/* banner part css end */
